# learn_OpenGl.com

./: CMakeLists.txt
Shaders/: colors.fs  colors.vs  light_cube.fs  lightning.fs  lightning.vs  multiple_lights.fs  multiple_lights.vs  shader.fs  shader.vs
include/: Shader.h
src/: Shader.cpp  main.cpp
